fix: fix html flickering

--- a/project/src/index.css
+++ b/project/src/index.css
@@ -61,6 +61,7 @@
 }
 
 :root {
+  color-scheme: light;
   --radius: 0.65rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
@@ -96,6 +97,7 @@
 }
 
 .dark {
+  color-scheme: dark;
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
@@ -112,7 +114,7 @@
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
-  --input:  oklch(1 0 0 / 15%);
+  --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.421 0.095 57.708);
   --chart-1: oklch(0.905 0.182 98.111);
   --chart-2: oklch(0.795 0.184 86.047);
